# dcube-conv

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/dcube_conv/: convert.py  loader.py  station_mapper.py  stations.py  stationxml.py  stats.py  utils.py
src/dcube_conv/app/: dcube_convert.py
src/dcube_conv/model/: __init__.py
